--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.002   2019-05-28 (PERLANCAR)
+
+	- open-browser: Use Perinci::CmdLine, accept multiple URLs, add
+	  --dry-run (-n).
+
+
 0.001   2017-07-02 (PERLANCAR)
 
         - First release.
