--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+0.003   2019-12-09  Released-By: PERLANCAR; Urgency: low
+
+	- No functional changes.
+
+	- [doc] Mention App::BrowserUtils.
+
+
 0.002   2019-05-28  Released-By: PERLANCAR
 
 	- open-browser: Use Perinci::CmdLine, accept multiple URLs, add
